@@ -1,9 +1,12 @@
 package upc.edu.pe.AccountTransaction.service.impl;
 
+import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import upc.edu.pe.AccountTransaction.dto.TransactionDto;
+import upc.edu.pe.AccountTransaction.dto.request.TransactionRequestDto;
+import upc.edu.pe.AccountTransaction.dto.response.TransactionResponseDto;
 import upc.edu.pe.AccountTransaction.exception.ResourceNotFoundException;
 
 import upc.edu.pe.AccountTransaction.model.Transaction;
@@ -14,54 +17,47 @@ import upc.edu.pe.AccountTransaction.service.TransactionService;
 import java.time.LocalDate;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class TransactionServiceImpl implements TransactionService {
 
-    @Autowired
-    private TransactionRepository transactionRepository;
-    @Override
-    public TransactionDto createTransaction(Transaction transaction) {
 
-        Transaction savedTransaction = transactionRepository.save(transaction);
-        return new TransactionDto(savedTransaction.getId(), savedTransaction.getType(), savedTransaction.getAmount(), savedTransaction.getBalance(),savedTransaction.getCreateDate());
+    private final TransactionRepository transactionRepository;
+    private final ModelMapper modelMapper;
+
+    public TransactionServiceImpl(TransactionRepository transactionRepository, ModelMapper modelMapper){
+        this.transactionRepository = transactionRepository;
+        this.modelMapper = modelMapper;
+    }
+
+
+    @Override
+    public TransactionResponseDto createTransaction(TransactionRequestDto transactionRequestDto) {
+
+        var newTransaction = modelMapper.map(transactionRequestDto, Transaction.class);
+        return modelMapper.map(transactionRepository.save(newTransaction), TransactionResponseDto.class);
 
     }
 
     @Override
-    public TransactionDto getTransactionById(Long id) {
+    public TransactionResponseDto getTransactionById(Long id) {
         Transaction transaction = transactionRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Transaction not found for ID: " + id));
 
-        return new TransactionDto(
-                transaction.getId(),
-                transaction.getType(),
-                transaction.getAmount(),
-                transaction.getBalance(),
-                transaction.getCreateDate()
-
-        );
+        return modelMapper.map(transaction, TransactionResponseDto.class);
     }
 
     @Override
-    public List<TransactionDto> getTransactionByNameCustomer(String nameCustomer) {
+    public List<TransactionResponseDto> getTransactionByNameCustomer(String nameCustomer) {
         List<Transaction> transactions = transactionRepository.findByAccountNameCustomer(nameCustomer);
 
         return transactions.stream()
-                .map(transaction -> new TransactionDto(
-                        transaction.getId(),
-                        transaction.getType(),
-                        transaction.getAmount(),
-                        transaction.getBalance(),
-                        transaction.getCreateDate()
-
-                ))
-                .collect(Collectors.toList());
+                .map(transaction -> modelMapper.map(transaction, TransactionResponseDto.class))
+                .toList();
     }
 
     @Override
-    public List<TransactionDto> getTransactionByDateRange(String dateStart, String dateEnd) {
+    public List<TransactionResponseDto> getTransactionByDateRange(String dateStart, String dateEnd) {
         LocalDate startDate = LocalDate.parse(dateStart);
         LocalDate endDate = LocalDate.parse(dateEnd);
 
@@ -69,14 +65,7 @@ public class TransactionServiceImpl implements TransactionService {
 
 
         return transactions.stream()
-                .map(transaction -> new TransactionDto(
-                        transaction.getId(),
-                        transaction.getType(),
-                        transaction.getAmount(),
-                        transaction.getBalance(),
-                        transaction.getCreateDate()
-
-                ))
-                .collect(Collectors.toList());
+                .map(transaction -> modelMapper.map(transaction, TransactionResponseDto.class))
+                .toList();
     }
 }
